# my_ecs

./: .gitignore  CMakeLists.txt  README.md
include/: Component.hpp  Entity.hpp  EntityManager.hpp  RFECSWrapper.hpp  System.hpp  SystemManager.hpp
sources/: Component.cpp  Entity.cpp  EntityManager.cpp  RFECSWrapper.cpp  System.cpp  SystemManager.cpp
